force-app/main/default/objects/Messaging_Invoice__c/Messaging_Invoice__c.object-meta.xml
<CustomObject>
    <description>Object to store Invoices for messages from Arbor and NGB in the future.</description>
    <label>Messaging Invoice</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Message Bill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messaging Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>