force-app/main/default/objects/Messaging_Invoice__c/fields/AAD_Discounts__c.field-meta.xml
<CustomField>
    <fullName>AAD_Discounts__c</fullName>
    <label>AAD Discounts</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>