force-app/main/default/objects/Messaging_Invoice__c/fields/AAD_Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>AAD_Total_Charges__c</fullName>
    <label>AAD Total Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>