force-app/main/default/objects/Messaging_Invoice__c/fields/AAD_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>AAD_Total_Units__c</fullName>
    <label>AAD Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>