force-app/main/default/objects/Messaging_Invoice__c/fields/ARPU__c.field-meta.xml
<CustomField>
    <fullName>ARPU__c</fullName>
    <formula>IF (Min_Billable_Units__c &gt;0,Total_Bill__c /  Min_Billable_Units__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>