force-app/main/default/objects/Messaging_Invoice__c/fields/Auxiliary_Sensor_Charges__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_Sensor_Charges__c</fullName>
    <label>Auxiliary Sensor Charges($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>