force-app/main/default/objects/Messaging_Invoice__c/fields/Auxiliary_Sensor_Units__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_Sensor_Units__c</fullName>
    <label>Auxiliary Sensor Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>