force-app/main/default/objects/Messaging_Invoice__c/fields/Avg_Events_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Avg_Events_per_Unit__c</fullName>
    <label>Avg. Events per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>