force-app/main/default/objects/Messaging_Invoice__c/fields/Base_Charge__c.field-meta.xml
<CustomField>
    <fullName>Base_Charge__c</fullName>
    <label>Net Base Charge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>