force-app/main/default/objects/Messaging_Invoice__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <label>Base Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>