force-app/main/default/objects/Messaging_Invoice__c/fields/Base_Rate_currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_currency__c</fullName>
    <label>Base Rate ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>