force-app/main/default/objects/Messaging_Invoice__c/fields/Billable_Units__c.field-meta.xml
<CustomField>
    <fullName>Billable_Units__c</fullName>
    <label>Billable Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>