force-app/main/default/objects/Messaging_Invoice__c/fields/Billed_Units__c.field-meta.xml
<CustomField>
    <fullName>Billed_Units__c</fullName>
    <label>Billed Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>