force-app/main/default/objects/Messaging_Invoice__c/fields/Cargo_Sensors_Charges__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Sensors_Charges__c</fullName>
    <label>Cargo Sensors Charges($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>