force-app/main/default/objects/Messaging_Invoice__c/fields/Comm_Link_Charges__c.field-meta.xml
<CustomField>
    <fullName>Comm_Link_Charges__c</fullName>
    <label>Comm Link Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>