force-app/main/default/objects/Messaging_Invoice__c/fields/Critical_System_Monitoring_Charges__c.field-meta.xml
<CustomField>
    <fullName>Critical_System_Monitoring_Charges__c</fullName>
    <label>Critical System Monitoring Charges($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>