force-app/main/default/objects/Messaging_Invoice__c/fields/Critical_System_Monitoring_Units__c.field-meta.xml
<CustomField>
    <fullName>Critical_System_Monitoring_Units__c</fullName>
    <label>Critical System Monitoring Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>