force-app/main/default/objects/Messaging_Invoice__c/fields/Daily_Operating_Data_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Daily_Operating_Data_Discounts__c</fullName>
    <label>Daily Operating Data Discounts($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>