force-app/main/default/objects/Messaging_Invoice__c/fields/Daily_Operating_Data_Units__c.field-meta.xml
<CustomField>
    <fullName>Daily_Operating_Data_Units__c</fullName>
    <label>Daily Operating Data Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>