force-app/main/default/objects/Messaging_Invoice__c/fields/Door_Sensors_Charges__c.field-meta.xml
<CustomField>
    <fullName>Door_Sensors_Charges__c</fullName>
    <label>Door Sensors Charges($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>