force-app/main/default/objects/Messaging_Invoice__c/fields/Door_Sensors_Units__c.field-meta.xml
<CustomField>
    <fullName>Door_Sensors_Units__c</fullName>
    <label>Door Sensors Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>