force-app/main/default/objects/Messaging_Invoice__c/fields/Eval_Discount__c.field-meta.xml
<CustomField>
    <fullName>Eval_Discount__c</fullName>
    <label>Eval Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>