force-app/main/default/objects/Messaging_Invoice__c/fields/Ext_Maint_Charge_Units__c.field-meta.xml
<CustomField>
    <fullName>Ext_Maint_Charge_Units__c</fullName>
    <label>Ext Maint Charge Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>