force-app/main/default/objects/Messaging_Invoice__c/fields/Ext_Maint_Charges__c.field-meta.xml
<CustomField>
    <fullName>Ext_Maint_Charges__c</fullName>
    <label>Ext Maint Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>