force-app/main/default/objects/Messaging_Invoice__c/fields/Ext_Maintenance_Billed_Units__c.field-meta.xml
<CustomField>
    <fullName>Ext_Maintenance_Billed_Units__c</fullName>
    <label>Ext. Maintenance Billed Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>