force-app/main/default/objects/Messaging_Invoice__c/fields/Foundation_Plan_Discount__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Plan_Discount__c</fullName>
    <label>Foundation Plan Discount($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>