force-app/main/default/objects/Messaging_Invoice__c/fields/Free_Incremental_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Free_Incremental_Bytes__c</fullName>
    <label>Free Incremental Bytes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>