force-app/main/default/objects/Messaging_Invoice__c/fields/Free_Message_Discount__c.field-meta.xml
<CustomField>
    <fullName>Free_Message_Discount__c</fullName>
    <label>Free Message Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>