force-app/main/default/objects/Messaging_Invoice__c/fields/Free_Msg_Charges__c.field-meta.xml
<CustomField>
    <fullName>Free_Msg_Charges__c</fullName>
    <label>Free Msg Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>