force-app/main/default/objects/Messaging_Invoice__c/fields/Full_Base_Charge_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Full_Base_Charge_Dollars__c</fullName>
    <label>Full Base Charge Dollars</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>