force-app/main/default/objects/Messaging_Invoice__c/fields/HOS_Discounts__c.field-meta.xml
<CustomField>
    <fullName>HOS_Discounts__c</fullName>
    <label>HOS Discounts</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>