force-app/main/default/objects/Messaging_Invoice__c/fields/HOS_Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>HOS_Total_Charges__c</fullName>
    <label>HOS Total Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>