force-app/main/default/objects/Messaging_Invoice__c/fields/HOS_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>HOS_Total_Units__c</fullName>
    <label>HOS Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>