force-app/main/default/objects/Messaging_Invoice__c/fields/In_Service__c.field-meta.xml
<CustomField>
    <fullName>In_Service__c</fullName>
    <label>In Service %</label>
    <length>50</length>
    <type>Text</type>
</CustomField>