force-app/main/default/objects/Messaging_Invoice__c/fields/In_Service_Units__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Units__c</fullName>
    <label>In-Service Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>