force-app/main/default/objects/Messaging_Invoice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>