force-app/main/default/objects/Messaging_Invoice__c/fields/Messages_Unit__c.field-meta.xml
<CustomField>
    <fullName>Messages_Unit__c</fullName>
    <label>Messages / Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>