force-app/main/default/objects/Messaging_Invoice__c/fields/Net_Base_Charge_Units__c.field-meta.xml
<CustomField>
    <fullName>Net_Base_Charge_Units__c</fullName>
    <label>Net Base Charge Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>