force-app/main/default/objects/Messaging_Invoice__c/fields/Net_Events__c.field-meta.xml
<CustomField>
    <fullName>Net_Events__c</fullName>
    <label>Net Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>