force-app/main/default/objects/Messaging_Invoice__c/fields/Net_Incremental_Charges__c.field-meta.xml
<CustomField>
    <fullName>Net_Incremental_Charges__c</fullName>
    <label>Net Incremental Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>