force-app/main/default/objects/Messaging_Invoice__c/fields/Net_Msg_Charges_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Net_Msg_Charges_per_Unit__c</fullName>
    <label>Net Msg Charges per Unit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>