force-app/main/default/objects/Messaging_Invoice__c/fields/Network_Res_Fee__c.field-meta.xml
<CustomField>
    <fullName>Network_Res_Fee__c</fullName>
    <label>Network Res Fee($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>