force-app/main/default/objects/Messaging_Invoice__c/fields/Non_Billable_Inactive_Units__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Inactive_Units__c</fullName>
    <label>Non-Billable Inactive Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>