force-app/main/default/objects/Messaging_Invoice__c/fields/NW_Reservation_Fee_Billed_Units__c.field-meta.xml
<CustomField>
    <fullName>NW_Reservation_Fee_Billed_Units__c</fullName>
    <label>NW Reservation Fee Billed Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>