force-app/main/default/objects/Messaging_Invoice__c/fields/OEX_Base_Charge_2nd_Gen__c.field-meta.xml
<CustomField>
    <fullName>OEX_Base_Charge_2nd_Gen__c</fullName>
    <label>OEX Base Charge (2nd Gen.) ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>