force-app/main/default/objects/Messaging_Invoice__c/fields/OEX_Billable_Units_2nd_Gen__c.field-meta.xml
<CustomField>
    <fullName>OEX_Billable_Units_2nd_Gen__c</fullName>
    <label>OEX Billable Units (2nd Gen)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>