force-app/main/default/objects/Messaging_Invoice__c/fields/Off_Hours_Discount__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours_Discount__c</fullName>
    <label>Off-Hours Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>