force-app/main/default/objects/Messaging_Invoice__c/fields/OFF_Hours_Discount_Desc__c.field-meta.xml
<CustomField>
    <fullName>OFF_Hours_Discount_Desc__c</fullName>
    <label>OFF Hours Discount Desc.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>