force-app/main/default/objects/Messaging_Invoice__c/fields/On_Air_Units__c.field-meta.xml
<CustomField>
    <fullName>On_Air_Units__c</fullName>
    <label>On Air Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>