force-app/main/default/objects/Messaging_Invoice__c/fields/Other_Event_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Event_Charges__c</fullName>
    <label>Other Event Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>