force-app/main/default/objects/Messaging_Invoice__c/fields/Prepaid_Units__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_Units__c</fullName>
    <label>Prepaid Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>