force-app/main/default/objects/Messaging_Invoice__c/fields/QTRACS_SFEE_Discount__c.field-meta.xml
<CustomField>
    <fullName>QTRACS_SFEE_Discount__c</fullName>
    <label>QTRACS SFEE Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>