force-app/main/default/objects/Messaging_Invoice__c/fields/Rate_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_Description__c</fullName>
    <label>Rate Class Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>