force-app/main/default/objects/Messaging_Invoice__c/fields/Reefer_Charges__c.field-meta.xml
<CustomField>
    <fullName>Reefer_Charges__c</fullName>
    <label>Reefer Charges ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>