force-app/main/default/objects/Messaging_Invoice__c/fields/Reefer_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Reefer_Discounts__c</fullName>
    <label>Reefer Discounts ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>