force-app/main/default/objects/Messaging_Invoice__c/fields/STRACS_iWeb_Fee__c.field-meta.xml
<CustomField>
    <fullName>STRACS_iWeb_Fee__c</fullName>
    <label>STRACS iWeb Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>