force-app/main/default/objects/Messaging_Invoice__c/fields/Sub_Acct_Charges__c.field-meta.xml
<CustomField>
    <fullName>Sub_Acct_Charges__c</fullName>
    <label>Sub Acct Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>