force-app/main/default/objects/Messaging_Invoice__c/fields/T2_Web_Charges__c.field-meta.xml
<CustomField>
    <fullName>T2_Web_Charges__c</fullName>
    <label>T2 Web Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>