force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Base_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Charges__c</fullName>
    <label>Total Base Charges ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>