force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Bill__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill__c</fullName>
    <label>Total Current Chgs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>