force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Foundation_Plan_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Foundation_Plan_Events__c</fullName>
    <label>Total Foundation Plan Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>