force-app/main/default/objects/Messaging_Invoice__c/fields/Total_in_Service_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_in_Service_Units__c</fullName>
    <label>Total in Service Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>