force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Incremental_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Incremental_Charge__c</fullName>
    <label>Total Incremental Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>