force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Incremental_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Incremental_Events__c</fullName>
    <label>Total Incremental Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>