force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Messages__c.field-meta.xml
<CustomField>
    <fullName>Total_Messages__c</fullName>
    <label>Total Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>