force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Network_Access_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Network_Access_Fee__c</fullName>
    <label>Total Network Access Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>