force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Non_Incremental_Characters__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Incremental_Characters__c</fullName>
    <label>Total Non-Incremental Characters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>