force-app/main/default/objects/Messaging_Invoice__c/fields/Total_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges__c</fullName>
    <label>Total Other Charges($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>