force-app/main/default/objects/Messaging_Invoice__c/fields/Trip_package_Charges__c.field-meta.xml
<CustomField>
    <fullName>Trip_package_Charges__c</fullName>
    <label>Trip package Charges($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>