force-app/main/default/objects/Messaging_Invoice__c/fields/Trip_package_Units__c.field-meta.xml
<CustomField>
    <fullName>Trip_package_Units__c</fullName>
    <label>Trip package Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>