force-app/main/default/objects/Messaging_Invoice__c/fields/Truckmail_SFEE__c.field-meta.xml
<CustomField>
    <fullName>Truckmail_SFEE__c</fullName>
    <label>Truckmail SFEE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>