force-app/main/default/objects/Messaging_Invoice__c/fields/TTRACS_Units__c.field-meta.xml
<CustomField>
    <fullName>TTRACS_Units__c</fullName>
    <label>TTRACS Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>