force-app/main/default/objects/Messaging_Invoice__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label># Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>