force-app/main/default/objects/Messaging_Invoice__c/fields/Units_on_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Units_on_Shelf__c</fullName>
    <label>Units on Shelf</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>