force-app/main/default/objects/Messaging_Invoice__c/fields/Units_on_Shelf_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Units_on_Shelf_Percentage__c</fullName>
    <label>% Units on Shelf</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>