force-app/main/default/objects/Messaging_Invoice__c/fields/Volume_Purch_Discount_Charges__c.field-meta.xml
<CustomField>
    <fullName>Volume_Purch_Discount_Charges__c</fullName>
    <label>Volume Purch Discount Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>