force-app/main/default/objects/Messaging_Invoice__c/recordTypes/FAMsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>FAMsgInvoice</fullName>
    <active>true</active>
    <description>Used for Fleet Advisor message bill</description>
    <label>FA Msg Invoice</label>
</RecordType>