force-app/main/default/objects/Messaging_Invoice__c/recordTypes/GT_Lite_Msg_Invoice.recordType-meta.xml
<RecordType>
    <fullName>GT_Lite_Msg_Invoice</fullName>
    <active>true</active>
    <description>Used for GT Lite Message bill</description>
    <label>GT Lite Msg Invoice</label>
</RecordType>