force-app/main/default/objects/Messaging_Invoice__c/recordTypes/GTMsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>GTMsgInvoice</fullName>
    <active>true</active>
    <description>Used for GlobalTRACS message bill</description>
    <label>GT Msg Invoice</label>
</RecordType>