force-app/main/default/objects/Messaging_Invoice__c/recordTypes/OEXFAMsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>OEXFAMsgInvoice</fullName>
    <active>true</active>
    <description>Used for OmniExpress FA Message bill</description>
    <label>OEX FA Msg Invoice</label>
</RecordType>