force-app/main/default/objects/Messaging_Invoice__c/recordTypes/OEXMsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>OEXMsgInvoice</fullName>
    <active>true</active>
    <description>Used for OmniExpress Message bill</description>
    <label>OEX Msg Invoice</label>
</RecordType>