force-app/main/default/objects/Messaging_Invoice__c/recordTypes/OTMsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>OTMsgInvoice</fullName>
    <active>true</active>
    <description>Used for OmniTRACS message bill</description>
    <label>OT Msg Invoice</label>
</RecordType>