force-app/main/default/objects/Messaging_Invoice__c/recordTypes/OVM_Msg_Invoice.recordType-meta.xml
<RecordType>
    <fullName>OVM_Msg_Invoice</fullName>
    <active>true</active>
    <description>Used for OmniVision Metro Message bill</description>
    <label>OVM Msg Invoice</label>
</RecordType>