force-app/main/default/objects/Messaging_Invoice__c/recordTypes/OVSMsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>OVSMsgInvoice</fullName>
    <active>true</active>
    <description>Used for OmniVision Satellite Message bill</description>
    <label>OVS Msg Invoice</label>
</RecordType>