force-app/main/default/objects/Messaging_Invoice__c/recordTypes/OVT_Msg_Invoice.recordType-meta.xml
<RecordType>
    <fullName>OVT_Msg_Invoice</fullName>
    <active>true</active>
    <description>Used for OmniVision Terrestrial Message bill</description>
    <label>OVT Msg Invoice</label>
</RecordType>