force-app/main/default/objects/Messaging_Invoice__c/recordTypes/T2MsgInvoice.recordType-meta.xml
<RecordType>
    <fullName>T2MsgInvoice</fullName>
    <active>true</active>
    <description>Used for T2 Message bill</description>
    <label>T2 Msg Invoice</label>
</RecordType>