force-app/main/default/objects/Messaging_Invoice__c/recordTypes/TFAMsgBill.recordType-meta.xml
<RecordType>
    <fullName>TFAMsgBill</fullName>
    <active>true</active>
    <description>Used for TFA message bill</description>
    <label>TFA Msg Bill</label>
</RecordType>